testsuite/keen.dg/prep1.c

/* { dg-do compile } */

#define ABC 1

int main( /* { dg-error "" } */
{         
}

